--- a/stylesheet.css
+++ b/stylesheet.css
@@ -283,3 +283,45 @@ medium {
   color: black;
   text-decoration: none;
 }
+
+/* Dropdown Button */
+.dropdown-button {
+  cursor: pointer;
+  list-style-type: none;
+  display: inline;
+  padding: 1em 2em 1em 2em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  background-color: #ffeb3b;
+  float: left;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: absolute;
+  display: inline;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  min-width: 500px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropdown-button {
+  background-color: #ffd600;
+}
