--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* BEGIN ROBOTO NORMAL FONT DEFINITIONS */
 
 @font-face {
@@ -248,87 +250,128 @@ medium {
   font-weight: 500;
 }
 
-.navbar li {
+/* SpryMenuBarVertical.css - version 0.6 - Spry Pre-Release 1.6.1 */
+
+/* Copyright (c) 2006. Adobe Systems Incorporated. All rights reserved. */
+
+/*******************************************************************************
+
+ LAYOUT INFORMATION: describes box model, positioning, z-order
+
+ *******************************************************************************/
+
+/* The outermost container of the Menu Bar, a fixed width box with no margin or padding */
+ul.MenuBarVertical {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
-  display: inline;
-  padding: 1em 2em 1em 2em;
+  font-size: 100%;
+  cursor: default;
+  width: 8em;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  background-color: #ffeb3b;
-  float: left;
 }
 
-.navbar li:hover {
-  background-color: #ffd600;
-  transition: background-color;
-  transition-duration: 0.5s;
+/* Set the active Menu Bar with this class, currently setting z-index to accomodate IE rendering bug: http://therealcrisp.xs4all.nl/meuk/IE-zindexbug.html */
+ul.MenuBarActive {
+  z-index: 1000;
 }
 
-.navlink:link {
-  color: black;
-  text-decoration: none;
-}
-
-.navlink:visited {
-  color: black;
-  text-decoration: none;
-}
-
-.navlink:hover {
-  color: black;
-  text-decoration: none;
-}
-
-.navlink:active {
-  color: black;
-  text-decoration: none;
-}
-
-/* Dropdown Button */
-.dropdown-button {
-  cursor: pointer;
+/* Menu item containers, position children relative to this container and are same fixed width as parent */
+ul.MenuBarVertical li {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
-  display: inline;
-  padding: 1em 2em 1em 2em;
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  background-color: #ffeb3b;
-  float: left;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: absolute;
-  display: inline;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
+  font-size: 100%;
   position: relative;
-  background-color: #f9f9f9;
-  min-width: 500px;
+  text-align: left;
+  cursor: pointer;
+  width: 8em;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  color: black;
+/* Submenus should appear slightly overlapping to the right (95%) and up (-5%) with a higher z-index, but they are initially off the left side of the screen (-1000em) */
+ul.MenuBarVertical ul {
+  margin: -5% 0 0 95%;
+  padding: 0;
+  list-style-type: none;
+  font-size: 100%;
+  position: absolute;
+  z-index: 1020;
+  cursor: default;
+  width: 9em;
+  left: -1000em;
+  top: 0;
+}
+
+/* Submenu that is showing with class designation MenuBarSubmenuVisible, we set left to 0 so it comes onto the screen */
+ul.MenuBarVertical ul.MenuBarSubmenuVisible {
+  left: 0;
+}
+
+/* Menu item containers are same fixed width as parent */
+ul.MenuBarVertical ul li {
+  width: 9em;
+}
+
+/*******************************************************************************
+
+ DESIGN INFORMATION: describes color scheme, borders, fonts
+
+ *******************************************************************************/
+
+/* Outermost menu container has borders on all sides */
+ul.MenuBarVertical {
+  /* I don't know what's going to go here yet */
+}
+
+/* Submenu containers have borders on all sides */
+ul.MenuBarVertical ul {
+  box-shadow: 1px 1px 25px 1px rgba(0, 0, 0, 0.38);
+}
+
+/* Menu items are a light gray block with padding and no text decoration */
+ul.MenuBarVertical a {
+  display: block;
+  cursor: pointer;
+  background-color: #ffeb3b;
+  padding: 1em 1em;
+  color: #333;
   text-decoration: none;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-  transition: display;
-  transition-duration: 3s;
+/* Menu items that have mouse over or focus have a blue background and white text */
+ul.MenuBarVertical a:hover,
+ul.MenuBarVertical a:focus {
+  background-color: orange;
+  color: black;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropdown-button {
-  background-color: #ffd600;
+/* Menu items that are open with submenus are set to MenuBarItemHover with a blue background and white text */
+ul.MenuBarVertical a.MenuBarItemHover,
+ul.MenuBarVertical a.MenuBarItemSubmenuHover,
+ul.MenuBarVertical a.MenuBarSubmenuVisible {
+  background-color: orange;
+  color: black;
+  transition: background-color;
+  transition-duration: 0.7s;
 }
 
-navlink {
-    transition: background-color;
-    transition-duration: 0.5s;
+/*******************************************************************************
+
+ SUBMENU INDICATION: styles if there is a submenu under a given menu item
+
+ *******************************************************************************/
+
+/* Menu items that have a submenu have the class designation MenuBarItemSubmenu and are set to use a background image positioned on the far left (95%) and centered vertically (50%) */
+ul.MenuBarVertical a.MenuBarItemSubmenu {
+  background-image: url("SpryAssets/SpryMenuBarRight.gif");
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
+}
+
+/* Menu items that are open with submenus have the class designation MenuBarItemSubmenuHover and are set to use a "hover" background image positioned on the far left (95%) and centered vertically (50%) */
+ul.MenuBarVertical a.MenuBarItemSubmenuHover {
+  background-image: url("SpryAssets/SpryMenuBarRight.gif");
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
 }
