--- a/stylesheet.css
+++ b/stylesheet.css
@@ -270,7 +270,9 @@ ul.MenuBarVertical {
   width: 8em;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  float: left;
+  top: 46px;
+  position: absolute;
+  float: none;
 }
 
 /* Set the active Menu Bar with this class, currently setting z-index to accomodate IE rendering bug: http://therealcrisp.xs4all.nl/meuk/IE-zindexbug.html */
@@ -377,10 +379,14 @@ ul.MenuBarVertical a.MenuBarItemSubmenuHover {
   background-position: 95% 50%;
 }
 
-div {
-  width: 320px;
+.header {
+  background-color: black;
+  color: white;
+  text-align: center;
   padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+  overflow: auto;
+}
+
+.content {
   float: left;
 }
