--- a/stylesheet.css
+++ b/stylesheet.css
@@ -270,7 +270,7 @@ ul.MenuBarVertical {
   width: 8em;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  top: 47px;
+
   position: absolute;
   float: none;
 }
@@ -387,8 +387,9 @@ ul.MenuBarVertical a.MenuBarItemSubmenuHover {
   font-family: "Roboto Slab";
   font-weight: 300;
   font-size: 20pt;
+  display: block;
 }
 
 .content {
-  float: left;
+  display: block;
 }
