--- a/stylesheet.css
+++ b/stylesheet.css
@@ -407,6 +407,7 @@ ul.MenuBarVertical a.MenuBarItemSubmenuHover {
   float: left;
   font-family: "Roboto", sans-serif;
   padding: 1em;
+  padding-right: 20em;
 }
 
 .services li {
@@ -441,6 +442,7 @@ new {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
+
 .facts {
 	float: right;
 	padding: 1em;
@@ -451,4 +453,7 @@ new {
 	font-weight: 300;
 }
 
-
+.contact {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
