--- a/stylesheet.css
+++ b/stylesheet.css
@@ -457,3 +457,12 @@ new {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
+.foot {
+	position: absolute;
+	bottom: 0;
+	background-color: green;
+	padding: 0;
+	width: 100%;
+	left: 0;
+	
+}
